<resources>
    <string name="app_name">Jakarta Weather</string>
    <string name="cloudy">Berawan</string>
    <string name="clear">Cerah</string>
    <string name="thunder">Halilintar</string>
    <string name="rain">Hujan</string>
    <string name="drizzle">Badai</string>
    <string name="weather_icon">weather_icon</string>
    <string name="hour">hour</string>
    <string name="_18">18</string>
    <string name="days">days</string>
    <string name="degree">degree</string>
</resources>
